# homework

Информатика_И_Основы_Программирования/lab10/: CMakeLists.txt  main.cpp
Информатика_И_Основы_Программирования/lab10/headers/: data.h  dictionary.h  printdict.h  search.h  util.h
Информатика_И_Основы_Программирования/lab10/sources/: dictionary.cpp  printdict.cpp  search.cpp  util.cpp
Информатика_И_Основы_Программирования/lab11/: CMakeLists.txt  main.cpp
Информатика_И_Основы_Программирования/lab4/: main.cpp
Информатика_И_Основы_Программирования/lab6/: CMakeLists.txt  a  main.cpp
Информатика_И_Основы_Программирования/lab7_1/: CMakeLists.txt  main.cpp
Информатика_И_Основы_Программирования/lab8/: CMakeLists.txt  main.cpp
Информатика_И_Основы_Программирования/lab9/: CMakeLists.txt  main.cpp  print.cpp  print.h
